// This is the public API offered by your entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "akkaserverless/annotations.proto";
import "google/api/annotations.proto";

package com.lightbend.aspubsub.inventory;

option java_outer_classname = "InventoryApi";

message AddItemMsg {
  string user_id = 10 [(akkaserverless.field).entity_key = true];
  string item_id = 20;
  string name = 30;
  string description = 40;
  string condition = 45;
  int32 count = 50;
}

message RemoveItemMsg {
  string user_id = 10 [(akkaserverless.field).entity_key = true];
  string item_id = 20;
}

message GetInventoryMsg {
  string user_id = 10 [(akkaserverless.field).entity_key = true];
}

message Item {
  string item_id = 10;
  string name = 20;
  string description = 30;
  string condition = 40;
  int32 count = 50;
}

message Inventory {
  repeated Item items = 10;
}

service InventoryService {
  option (akkaserverless.service) = {
    type : SERVICE_TYPE_ENTITY
    component : "com.lightbend.aspubsub.inventory.domain.Inventory"
  };

  rpc AddItem(AddItemMsg) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/user/{user_id}/items/add"
      body: "*"
    };
  }

  rpc RemoveItem(RemoveItemMsg) returns (google.protobuf.Empty) {
    option (google.api.http).post = "/user/{user_id}/items/{item_id}/remove";
  }

  rpc GetInventory(GetInventoryMsg) returns (Inventory) {
    option (google.api.http) = {
      get: "/users/{user_id}"
      additional_bindings: {
        get: "/users/{user_id}/items"
        response_body: "items"
      }
    };
  }
}
